@@ -1,3 +1,9 @@
+2014-04-11 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* index.php: updated description to include TLCS-90 and STM8,
+	  added News - sdcc 3.4.0 release
+	* previous.php: moved 3.3.0 release items
+
 2014-04-05 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* index.php: added News - sdcc 3.4.0 RC3
